Use different method of positioning dropdown arrow to avoid wrapping with long usernames. - Make dropdown menu take up full width of trigger
[Skip CI] [Finishes #70967688] https://www.pivotaltracker.com/story/show/70967688

--- a/src/main/sass/login-server/stylesheets/base.scss
+++ b/src/main/sass/login-server/stylesheets/base.scss
@@ -92,9 +92,11 @@ input {
 }
 
 .fa-chevron-down {
-    float: right;
     font-size: 10px;
     margin-top: 4px;
+    position: absolute;
+    right: 8px;
+    top: 5px;
 }
 
 .instructions-sent {
@@ -158,7 +160,8 @@ input {
 
 .dropdown-trigger {
     cursor: pointer;
-    padding: 4px 8px;
+    padding: 4px 24px 4px 8px;
+    position: relative;
 }
 
 .dropdown-content {
